--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
         - gcc-4.8
         - g++-4.8
         - python-coverage
+        - python-pip
 
 before_install:
     - export DISPLAY=:99.0
