--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ addons:
         - doxygen
         - gcc-4.8
         - g++-4.8
-        - python-coverage
         - python-pip
 
 before_install:
@@ -33,6 +32,8 @@ install:
     - export PATH=$DELIGHT/bin:$PATH
     - if [ -n "$COMPILER_VERSION" ]; then export CXX="${CXX}-${COMPILER_VERSION}"; fi
     - pip install --user codacy-coverage
+    - pip install --user coverage
+    - python -c "import coverage; print coverage.__version__"
 
 script:
     - scons -j 2 install CXX=$CXX CXXSTD=$CXXSTD ENV_VARS_TO_IMPORT=PATH RMAN_ROOT=$DELIGHT
