--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,6 @@ install:
     - if [ -n "$COMPILER_VERSION" ]; then export CXX="${CXX}-${COMPILER_VERSION}"; fi
     - pip install --user codacy-coverage
     - pip install --user coverage
-    - python -c "import coverage; print coverage.__version__"
 
 script:
     - scons -j 2 install CXX=$CXX CXXSTD=$CXXSTD ENV_VARS_TO_IMPORT=PATH RMAN_ROOT=$DELIGHT
@@ -66,7 +65,7 @@ compiler:
 env:
     - COMPILER_VERSION= CXXSTD=c++98
     - COMPILER_VERSION=4.8 CXXSTD=c++98
-    - COMPILER_VERSION=4.8 CXXSTD=c++11
+    - COMPILER_VERSION=4.8 CXXSTD=c++11 GAFFER_COVERAGE=1
 
 matrix:
     exclude:
